2014-07-29  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--state-put-2): Handle horizontal scroll
	bars, if present.

2014-07-29  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* menu-bar.el (menu-bar-update-buffers): Update item list format
	in `buffers-menu' to confirm with changes to `get_keyelt'
	(r117463).  (Bug#18016)

2014-07-28  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (inferior-python-mode): Make input prompts
	read-only.

2014-07-28  Emilio C. Lopes  <eclig@gmx.net>

	* net/tramp-sh.el (tramp-get-remote-python): Also search for
	executables named "python2" or "python3".
	(tramp-get-remote-uid-with-python): Use parentheses around
	arguments to `print' to make it compatible with Python 3.
	(tramp-get-remote-gid-with-python): Ditto.  (Bug#18118)

2014-07-28  Eli Zaretskii  <eliz@gnu.org>

	* window.el (window--pixel-to-total): Use FRAME's root window, not
	that of the selected frame.  (Bug#18112, Bug#16674)

2014-07-28  Andreas Schwab  <schwab@linux-m68k.org>

	* textmodes/tex-mode.el (tex-font-lock-verb): Doc fix.
	(Bug#18117)

2014-07-28  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (inferior-python-mode): Doc fix.

2014-07-28  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-edit-item--next-key): If next key is
	not a character, ignore it instead of raising an error.

	* calendar/todo-mode.el: Fix handling of marked items and make
	minor code improvements.
	(todo-edit-item): If there are marked items, ensure user can only
	invoke editing commands that work with marked items.
	(todo-edit-item--text): When there are marked items, make it a
	noop if invoked with point not on an item; otherwise, ensure it
	applies only to item at point.
	(todo-item-undone): If there are marked not-done items, return
	point to its original position before signaling user error.
	(todo--user-error-if-marked-done-item): New function.
	(todo-edit-item--header, todo-edit-item--diary-inclusion)